--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_1.png" alt="reason">
+                            <img src="./icons/reasons/reasons_1.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
@@ -102,7 +102,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_5.png" alt="reason">
+                            <img src="./icons/reasons/reasons_5.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
@@ -117,7 +117,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_2.png" alt="reason">
+                            <img src="./icons/reasons/reasons_2.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
@@ -132,7 +132,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_6.png" alt="reason">
+                            <img src="./icons/reasons/reasons_6.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
@@ -147,7 +147,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_3.png" alt="reason">
+                            <img src="./icons/reasons/reasons_3.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
@@ -162,7 +162,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_7.png" alt="reason">
+                            <img src="./icons/reasons/reasons_7.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Всегда большое количество заказов</div>
@@ -177,7 +177,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_4.png" alt="reason">
+                            <img src="./icons/reasons/reasons_4.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Круглосуточная поддержка</div>
@@ -191,7 +191,7 @@
                 <div class="col-md-6">
                     <div class="reasons_block">
                         <div class="reasons_round">
-                            <img src="../src/icons/reasons/reasons_8.png" alt="reason">
+                            <img src="./icons/reasons/reasons_8.png" alt="reason">
                         </div>
                         <div class="reasons_descr">
                             <div class="reasons_subtitle">Без шашечек и наклеек</div>
